# simstring

./: pyproject.toml  setup.py
simstring/: memoize.py  searcher.py
simstring/database/: base.py  dict.py  mongo.py  redisdatabase.py
simstring/feature_extractor/: character_ngram.py
simstring/measure/: cosine.py  dice.py  jaccard.py
