[tool.poetry]
name = "simstring"
version = "1.0.0"
description = "A Python implementation of the SimString, a simple and efficient algorithm for approximate string matching."
authors = ["Julien Tourille <julien.tourille@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
