[tool.poetry]
name = "simstring"
version = "1.0.0"
description = "A Python implementation of the SimString, a simple and efficient algorithm for approximate string matching."
authors = ["Julien Tourille <julien.tourille@gmail.com>"]
license = "MIT"
packages = [
    { include = "simstring" }
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
pre-commit = "^2.9.3"
dephell = "^0.8.3"

[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
